crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_astro_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.astro\", &source)"
---
- name: simple
  kind: Class
  start_line: 1
  end_line: 34
  signature: "<astro:component name=\"simple\">"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: EventListener
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: getStaticPaths
  kind: Function
  start_line: 5
  end_line: 10
  signature: "export function getStaticPaths() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: HttpHandler
  visibility: Public
  type_info: ~
  parent_name: ~
  scope_chain: ~
- name: formatTitle
  kind: Function
  start_line: 12
  end_line: 14
  signature: "function formatTitle(title) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
  parent_name: ~
  scope_chain: ~
