crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_bash_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 4031
expression: "parsed_references(\"simple.sh\", &source)"
---
- name: source
  kind: Call
  start_line: 3
  context: "#!/bin/bash"
  receiver: ~
- name: source
  kind: Import
  start_line: 3
  context: source ./utils.sh
  receiver: ~
- name: echo
  kind: Call
  start_line: 8
  context: "{"
  receiver: ~
- name: echo
  kind: Call
  start_line: 13
  context: "echo \"$1\" | tr '[:lower:]' '[:upper:]'"
  receiver: ~
- name: tr
  kind: Call
  start_line: 13
  context: "echo \"$1\" | tr '[:lower:]' '[:upper:]'"
  receiver: ~
- name: format_name
  kind: Call
  start_line: 19
  context: "$(format_name \"world\")"
  receiver: ~
- name: greet
  kind: Call
  start_line: 20
  context: "{"
  receiver: ~
- name: main
  kind: Call
  start_line: 23
  context: "#!/bin/bash"
  receiver: ~
