crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_bash_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.sh\", &source)"
---
- name: greet
  kind: Function
  start_line: 6
  end_line: 9
  signature: "greet() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
- name: format_name
  kind: Function
  start_line: 12
  end_line: 14
  signature: "format_name() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Inferred
  type_info: ~
- name: main
  kind: Function
  start_line: 17
  end_line: 21
  signature: "main() {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Inferred
  type_info: ~
