crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_c_symbols.snap
---
source: crates/nestweaver-parser/src/parse.rs
expression: "parsed_symbols(\"simple.c\", &source)"
---
- name: SensorConfig
  kind: TypeAlias
  start_line: 4
  end_line: 7
  signature: "typedef struct {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: id
  kind: Property
  start_line: 5
  end_line: 5
  signature: int id;
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SensorType
  kind: Enum
  start_line: 9
  end_line: 13
  signature: "enum SensorType {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: TEMPERATURE
  kind: Constant
  start_line: 10
  end_line: 10
  signature: TEMPERATURE
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: HUMIDITY
  kind: Constant
  start_line: 11
  end_line: 11
  signature: HUMIDITY
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: PRESSURE
  kind: Constant
  start_line: 12
  end_line: 12
  signature: PRESSURE
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SensorManager
  kind: Class
  start_line: 15
  end_line: 18
  signature: "struct SensorManager {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: count
  kind: Property
  start_line: 16
  end_line: 16
  signature: int count;
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: SensorManager
  kind: Class
  start_line: 20
  end_line: 20
  signature: struct SensorManager
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: initialize
  kind: Function
  start_line: 20
  end_line: 22
  signature: "void initialize(struct SensorManager* mgr) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: calibrate
  kind: Function
  start_line: 24
  end_line: 26
  signature: "static int calibrate(int sensor_id) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Private
  type_info: ~
- name: main
  kind: Function
  start_line: 28
  end_line: 34
  signature: "int main(int argc, char** argv) {"
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: true
  entry_point_kind: Main
  visibility: Public
  type_info: ~
- name: SensorManager
  kind: Class
  start_line: 29
  end_line: 29
  signature: struct SensorManager
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
- name: val
  kind: Variable
  start_line: 31
  end_line: 31
  signature: int val = calibrate(1);
  content_hash: "0000000000000000000000000000000000000000000000000000000000000000"
  is_entry_point: false
  entry_point_kind: ~
  visibility: Public
  type_info: ~
