crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_cobol_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 4003
expression: "parsed_references(\"simple.cbl\", &source)"
---
- name: INITIALIZE-DATA
  kind: Call
  start_line: 13
  context: PERFORM INITIALIZE-DATA
  receiver: ~
- name: PROCESS-GREETING
  kind: Call
  start_line: 14
  context: PERFORM PROCESS-GREETING
  receiver: ~
- name: DISPLAY-RESULT
  kind: Call
  start_line: 15
  context: PERFORM DISPLAY-RESULT
  receiver: ~
- name: UTIL-PROGRAM
  kind: Call
  start_line: 31
  context: "CALL 'UTIL-PROGRAM' USING WS-NAME."
  receiver: ~
- name: COMMON-DEFS
  kind: Includes
  start_line: 34
  context: COPY COMMON-DEFS.
  receiver: ~
