crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_cpp_header_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 6215
expression: "parsed_references(\"inline.h\", &source)"
---
[]
