crates/nestweaver-parser/src/snapshots/nestweaver_parser__parse__tests__snapshot_tests__snapshot_cpp_references.snap
---
source: crates/nestweaver-parser/src/parse.rs
assertion_line: 6323
expression: "parsed_references(\"simple.cpp\", &source)"
---
- name: iostream
  kind: Includes
  start_line: 1
  context: "#include <iostream>"
  receiver: ~
- name: sensor.h
  kind: Includes
  start_line: 2
  context: "#include \"sensor.h\""
  receiver: ~
- name: calibrate
  kind: Call
  start_line: 13
  context: calibrate();
  receiver: ~
- name: getReading
  kind: Call
  start_line: 17
  context: return getReading(sensorId);
  receiver: ~
- name: initialize
  kind: Call
  start_line: 33
  context: mgr.initialize();
  receiver: ~
- name: readTemperature
  kind: Call
  start_line: 34
  context: temp = mgr.readTemperature()
  receiver: ~
- name: logValue
  kind: Call
  start_line: 35
  context: logValue(temp);
  receiver: ~
